--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,25 @@
-:root {
+/* src/styles/global.css */
+body {
+  font-family: 'Comic Sans MS', sans-serif;
+  background-color: #f5f5f5;
+  margin: 0;
+  padding: 0;
+}
+
+h1, h2, h3 {
+  color: #d62828;
+  text-align: center;
+}
+
+p {
+  color: #000;
+  text-align: center;
+}
+
+
+
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -69,4 +90,4 @@ button:focus-visible {
 
 .character_icon {
   width: 80px;
-}
+} */
